[package]
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
name    = "rust-av-kit"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_av_kit"
crate-type = ["cdylib", "rlib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
av-data = "0.4"
av-format = "0.7"
v_frame = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
