[package]
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
name    = "rust-av-kit"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_av_kit"
crate-type = ["cdylib", "rlib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
# Core rust-av crates
av-codec = "0.2"
av-data = "0.4"
av-format = "0.7"
v_frame = "0.3"
# Image encoding for saving frames
image = "0.24"
# Matroska/WebM support
matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
# Codec support
rav1e = { version = "0.7", optional = true }
libvpx-sys = { version = "1.4", optional = true }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "1.0"

[features]
default = []
av1 = ["rav1e"]
vp9 = ["libvpx-sys"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
